# START-compiler

./: .gitignore  CMakeLists.txt  CmakeSetup.bat  LEXER  Lexer.c  Logger.cs  MyLanguageServer.cs  README.md  Server.cs  Server.csproj  Server.sln  TextDocumentHandler.cs  donut_spin  hello.txt  lexer.cpp  output  start_syntax_guide.txt  test.txt  ç
custom-LSP/: .gitignore  package-lock.json  package.json  testDefinitionFile.txt  tsconfig.json
custom-LSP/client/: package-lock.json  package.json
custom-LSP/client/src/: extension.ts
custom-LSP/server/: package-lock.json  package.json  tsconfig.json
custom-LSP/server/src/: server.ts  testLexerAddon.ts
custom-LSP/server/src/methods/: documentUtils.ts  log.ts  projectRoot.ts  semanticTokenHighlighting.ts  tokenReader.ts  tokens.ts
docs/: ASTNode_child_order_specificiation.txt  grammar.txt
handler/: MyLanguageServer.cs  TextDocumentHandler.cs
include/: lexer.hpp  parser.hpp
lexer/: AST  AST-builder.cpp  LEXER  MAIN  astfile  grammat.txt  lexer.c  lexer.h  lexerpp.cpp  lexerpp.hpp  parser.cpp  test.txt  ç
lexer-ts-addon/: .gitignore  binding.gyp  package-lock.json  package.json  tsconfig.json
lexer-ts-addon/lexer_out/: tokens.json
lexer-ts-addon/src/: lexer-test.cpp  lexer_addon.cpp  lexer_addon.ts  main.ts  projectRoot.ts  tokenRequester.ts
lexer/parser/: parser.cpp
lexer/tests/valid/: test.c  test.start
lexer/token-JSON/: token_to_json.cpp  token_to_json.hpp
logs/: cs.custom
src/: Logger.cs  Server.cs  lexer.cpp  parser.cpp
